# adventofcode

./: .gitignore  .travis.yml  Makefile  README.md  justfile  pyproject.toml  setup.py  setup_day.sh
.github/workflows/: build.yml
adventofcode/: __init__.py  challenge_template.py  day1.py  static_data.py  utils.py
adventofcode/_2015/day1/: challenge.py  prompt.txt
adventofcode/_2015/day2/: challenge.py  prompt.txt
adventofcode/_2020/day1/: challenge.py
adventofcode/_2020/day10/: challenge.py
adventofcode/_2020/day11/: challenge.py  prompt.txt
adventofcode/_2020/day13/: challenge.py
adventofcode/_2020/day2/: challenge.py  prompt.txt
adventofcode/_2020/day3/: challenge.py
adventofcode/_2020/day4/: challenge.py  prompt.txt
adventofcode/_2020/day5/: challenge.py
adventofcode/_2020/day6/: challenge.py
adventofcode/_2020/day7/: challenge.py
adventofcode/_2020/day8/: challenge.py  prompt.txt
adventofcode/_2020/day9/: challenge.py
adventofcode/_2021/day1/: challenge.py
adventofcode/_2021/day10/: challenge.py
adventofcode/_2021/day11/: challenge.py
adventofcode/_2021/day12/: challenge.py
adventofcode/_2021/day2/: challenge.py  prompt.txt
adventofcode/_2021/day21/: challenge.py  prompt.txt
adventofcode/_2021/day3/: challenge.py  prompt.txt
adventofcode/_2021/day4/: prompt.txt  (+1 more)
adventofcode/twentytwenty/: day1.py  day10.py  day11.py  day13.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7-old.py  day7.py  day8.py  day9.py
adventofcode/twentytwentyone/: day1.py  day2.py  day3.py
prompts/2020/: day10.txt  day13.txt  day3.txt  day5.txt  day6.txt  day7.txt
prompts/twentytwenty/: day1.txt  day9.txt
prompts/twentytwentyone/: day1.txt
test/unit/: test_template.py
(+104 files in other folders)
