[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adventofcode"
version = "0.1.0"
description = "An Advent calendar of coding challenges."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Justintime50" }]
urls = { Homepage = "http://github.com/justintime50/adventofcode" }
optional-dependencies = { dev = [
    "black == 25.*",
    "flake8 == 7.*",
    "Flake8-pyproject == 1.2.*",
    "isort == 7.*",
    "pytest == 9.*",
    "pytest-cov == 7.*",
] }

[tool.setuptools.packages.find]
exclude = ["examples", "test"]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
indent = 4
force_grid_wrap = 2
multi_line_output = 3
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
lines_after_imports = 2
include_trailing_comma = true
use_parentheses = true

[tool.flake8]
max-line-length = 120
extend-ignore = "E203"
