[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adventofcode"
version = "0.1.0"
description = "An Advent calendar of coding challenges."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Justintime50" }]
urls = { Homepage = "http://github.com/justintime50/adventofcode" }
optional-dependencies = { dev = [
    "pytest == 9.*",
    "pytest-cov == 7.*",
    "ruff == 0.14.*",
] }

[tool.setuptools.packages.find]
exclude = ["examples", "test"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["I", "E501"]
